[package]
name = "test-runner"
version = "0.1.0"
authors = ["Narawit Triprom <61010556@kmitl.ac.th>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
tokio-tungstenite = "*"
tokio = { version = "1.11.0", features = ["full"] }
futures-util = "0.3.17"
futures-channel = "0.3.17"
url = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"